--- a/Cinema/web/WEB-INF/web.xml
+++ b/Cinema/web/WEB-INF/web.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>Authentication</filter-name>
+        <filter-class>cinema.filter.Authentication</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>Authentication</filter-name>
+        <servlet-name>TicketManagerServlet</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
     <servlet>
         <servlet-name>MoviesListServlet</servlet-name>
         <servlet-class>cimena.controller.MoviesListServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>cimena.controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TicketManagerServlet</servlet-name>
+        <servlet-class>cimena.controller.TicketManagerServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>MoviesListServlet</servlet-name>
         <url-pattern>/MoviesList</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/Login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TicketManagerServlet</servlet-name>
+        <url-pattern>/ticketmanager</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
