[ CREATE ] Project TODOLists

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /BBookStore/build/
 /Cinema/nbproject/private/
 /Cinema/build/
+/SITShoes/nbproject/private/
+/SITShoes/build/
+/ToDoLists/nbproject/private/
+/ToDoLists/build/
